2013-02-11  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php: Added group all by default
	for standar users without group.

2013-02-04  Dario Rodriguez <dario@artica.es>

	* include/languages: Updated languages.

2013-02-04  Dario Rodriguez <dario@artica.es>

	* include/functions_form.php: Restored combo_incident_origin function

2013-02-01  Sancho Lerena <slerena@artica.es>

	* operation/download/browse.php: Fixed pagination.

2013-01-30  Sancho Lerena <slerena@artica.es>

	* operation/projects/task_planning.php,
	operation/user_report/report_full.php: Small fixes.

2013-01-30  Sancho Lerena <slerena@artica.es>

	* integria.centos.spec: new spec for centos/redhat. Deleted
	the old one for fedora.

	* integria.spec: Fixed problem with cron and with missing php dep.

2013-01-30  Dario Rodriguez <dario@artica.es>

	* DEBIAN/make_deb_package.sh: Fixed .svn delete folder command.
	* DEBIAN/control: Added php5-mycrypt package to dependences.
	* integria.spec: Changed version number.

2013-01-29  Sancho Lerena <slerena@artica.es>

	* include/functions_form.php: manage admin
	differently on show product categories.

	* wiki_data: Default data on wiki.

	* operation/download/manage_perms.php: Function to show
	categories manage admin in a special way.

	* operation/download/browse.php: Manage admin on different
	way.

2013-01-23  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_download_file.php: Fixed a problem
	with file download script which prints text before the headers and
	brokes the page.

2012-01-21  Sancho Lerena <slerena@artica.es>

	* operation/newsletter/queue_manager.php: Fixed problems
	on output buffer to avoid porblems in sites like dreamhost.

2012-01-17 Sancho Lerena <slerena@artica.es>

	* index.php: Added expire control for static contents

	* godmode/setup/setup_visual.php: Removed debug trace.

2012-12-12 Dario Rodriguez <dario.rodriguez@artica.es>
