@@ -1,5 +1,10 @@
 2013-02-11  Dario Rodriguez <dario@artica.es>
 
+	* operation/projects/task_detail.php: Fixed problem with ACL of project
+	manager to create/edit tasks.
+
+2013-02-11  Dario Rodriguez <dario@artica.es>
+
 	* operation/incidents/incident_detail.php: Added group all by default
 	for standar users without group.
 
